--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - 'scrape.py'
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 0 * * *"
+    - cron: '0 9-16 * * *' 
   workflow_dispatch:
 
 jobs:
