--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - 'scrape.py'
   schedule:
     - cron: "0 0 * * *"
-    - cron: '0 9-16 * * *' 
+    - cron: '*/20 9-16 * * *' 
   workflow_dispatch:
 
 jobs:
