--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,47 @@
-name: Scrape Tournament Stats
+name: LoL Stats Scraper
 
 on:
   push:
     paths:
       - 'scrape.py'
   schedule:
-    - cron: "0 0 * * *"
-    - cron: '*/20 9-16 * * *' 
+    - cron: "0 0 * * *" 
   workflow_dispatch:
 
 jobs:
-  scrape:
+  scrape-and-build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # 必须赋予写权限，否则无法 push
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.10'
 
-      - name: Install deps
-        run: pip install requests beautifulsoup4
+      - name: Install dependencies
+        run: pip install requests
 
-      - name: Run scraper
+      - name: Run Scraper
         run: python scrape.py
 
-      - name: Commit changes
+      - name: Commit and Push if changed
+        env:
+          TZ: Asia/Shanghai
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add .
-          git commit -m "Update tournament stats" || true
-          git push
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          
+          # 检查是否有文件发生变化
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "🚀 Content changed. Committing..."
+            git add index.html tournament/*.md
+            git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')"
+            git push
+          else
+            echo "💤 No changes detected. Skipping commit."
+          fi
