--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'scrape.py'
   schedule:
-    - cron: "0 0 * * *" 
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -36,10 +36,9 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           
-          # 检查是否有文件发生变化
           if [[ -n $(git status --porcelain) ]]; then
             echo "🚀 Content changed. Committing..."
-            git add index.html tournament/*.md
+            git add index.html tournament/*.md status.json
             git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')"
             git push
           else
